@@ -3204,10 +3204,6 @@ argument_list|)
 decl_stmt|;
 name|Clause
 name|clause
-init|=
-operator|new
-name|Clause
-argument_list|()
 decl_stmt|;
 name|int
 name|pos
@@ -3232,8 +3228,6 @@ name|start
 decl_stmt|;
 name|boolean
 name|disallowUserField
-init|=
-literal|false
 decl_stmt|;
 name|outer
 label|:
@@ -3244,6 +3238,16 @@ operator|<
 name|end
 condition|)
 block|{
+name|clause
+operator|=
+operator|new
+name|Clause
+argument_list|()
+expr_stmt|;
+name|disallowUserField
+operator|=
+literal|true
+expr_stmt|;
 name|ch
 operator|=
 name|s
@@ -3338,10 +3342,6 @@ name|field
 argument_list|)
 condition|)
 block|{
-name|disallowUserField
-operator|=
-literal|true
-expr_stmt|;
 name|clause
 operator|.
 name|field
@@ -3358,6 +3358,10 @@ operator|!=
 literal|null
 condition|)
 block|{
+name|disallowUserField
+operator|=
+literal|false
+expr_stmt|;
 name|pos
 operator|+=
 name|clause
@@ -3761,10 +3765,45 @@ name|clause
 operator|.
 name|raw
 operator|=
+name|s
+operator|.
+name|substring
+argument_list|(
+name|start
+argument_list|,
+name|pos
+argument_list|)
+expr_stmt|;
+comment|// escape colons, except for "match all" query
+if|if
+condition|(
+operator|!
+literal|"*:*"
+operator|.
+name|equals
+argument_list|(
 name|clause
 operator|.
-name|val
+name|raw
+argument_list|)
+condition|)
+block|{
+name|clause
+operator|.
+name|raw
+operator|=
+name|clause
+operator|.
+name|raw
+operator|.
+name|replaceAll
+argument_list|(
+literal|":"
+argument_list|,
+literal|"\\\\:"
+argument_list|)
 expr_stmt|;
+block|}
 block|}
 else|else
 block|{
@@ -3840,16 +3879,6 @@ name|clause
 argument_list|)
 expr_stmt|;
 block|}
-name|clause
-operator|=
-operator|new
-name|Clause
-argument_list|()
-expr_stmt|;
-name|disallowUserField
-operator|=
-literal|false
-expr_stmt|;
 block|}
 return|return
 name|lst
