@@ -2602,6 +2602,319 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+DECL|method|testOperatorsWithLiteralColons
+specifier|public
+name|void
+name|testOperatorsWithLiteralColons
+parameter_list|()
+block|{
+name|assertU
+argument_list|(
+name|adoc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"142"
+argument_list|,
+literal|"a_s"
+argument_list|,
+literal|"bogus:xxx"
+argument_list|,
+literal|"text_s"
+argument_list|,
+literal|"yak"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|adoc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"143"
+argument_list|,
+literal|"a_s"
+argument_list|,
+literal|"bogus:xxx"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|adoc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"144"
+argument_list|,
+literal|"text_s"
+argument_list|,
+literal|"yak"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|adoc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"145"
+argument_list|,
+literal|"a_s"
+argument_list|,
+literal|"a_s:xxx"
+argument_list|,
+literal|"text_s"
+argument_list|,
+literal|"yak"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|adoc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"146"
+argument_list|,
+literal|"a_s"
+argument_list|,
+literal|"a_s:xxx"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|adoc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"147"
+argument_list|,
+literal|"a_s"
+argument_list|,
+literal|"AND"
+argument_list|,
+literal|"a_s"
+argument_list|,
+literal|"NOT"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|commit
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"bogus:xxx AND text_s:yak"
+argument_list|,
+literal|"fl"
+argument_list|,
+literal|"id"
+argument_list|,
+literal|"qf"
+argument_list|,
+literal|"a_s b_s"
+argument_list|,
+literal|"defType"
+argument_list|,
+literal|"edismax"
+argument_list|,
+literal|"mm"
+argument_list|,
+literal|"0"
+argument_list|)
+argument_list|,
+literal|"//*[@numFound='1']"
+argument_list|,
+literal|"//str[@name='id'][.='142']"
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"a_s:xxx AND text_s:yak"
+argument_list|,
+literal|"fl"
+argument_list|,
+literal|"id"
+argument_list|,
+literal|"qf"
+argument_list|,
+literal|"a_s b_s"
+argument_list|,
+literal|"defType"
+argument_list|,
+literal|"edismax"
+argument_list|,
+literal|"mm"
+argument_list|,
+literal|"0"
+argument_list|,
+literal|"uf"
+argument_list|,
+literal|"text_s"
+argument_list|)
+argument_list|,
+literal|"//*[@numFound='1']"
+argument_list|,
+literal|"//str[@name='id'][.='145']"
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"NOT bogus:xxx +text_s:yak"
+argument_list|,
+literal|"fl"
+argument_list|,
+literal|"id"
+argument_list|,
+literal|"qf"
+argument_list|,
+literal|"a_s b_s"
+argument_list|,
+literal|"defType"
+argument_list|,
+literal|"edismax"
+argument_list|,
+literal|"mm"
+argument_list|,
+literal|"0"
+argument_list|,
+literal|"debugQuery"
+argument_list|,
+literal|"true"
+argument_list|)
+argument_list|,
+literal|"//*[@numFound='2']"
+argument_list|,
+literal|"//str[@name='id'][.='144']"
+argument_list|,
+literal|"//str[@name='id'][.='145']"
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"NOT a_s:xxx +text_s:yak"
+argument_list|,
+literal|"fl"
+argument_list|,
+literal|"id"
+argument_list|,
+literal|"qf"
+argument_list|,
+literal|"a_s b_s"
+argument_list|,
+literal|"defType"
+argument_list|,
+literal|"edismax"
+argument_list|,
+literal|"mm"
+argument_list|,
+literal|"0"
+argument_list|,
+literal|"uf"
+argument_list|,
+literal|"text_s"
+argument_list|)
+argument_list|,
+literal|"//*[@numFound='2']"
+argument_list|,
+literal|"//str[@name='id'][.='142']"
+argument_list|,
+literal|"//str[@name='id'][.='144']"
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"+bogus:xxx yak"
+argument_list|,
+literal|"fl"
+argument_list|,
+literal|"id"
+argument_list|,
+literal|"qf"
+argument_list|,
+literal|"a_s b_s text_s"
+argument_list|,
+literal|"defType"
+argument_list|,
+literal|"edismax"
+argument_list|,
+literal|"mm"
+argument_list|,
+literal|"0"
+argument_list|)
+argument_list|,
+literal|"//*[@numFound='2']"
+argument_list|,
+literal|"//str[@name='id'][.='142']"
+argument_list|,
+literal|"//str[@name='id'][.='143']"
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"+a_s:xxx yak"
+argument_list|,
+literal|"fl"
+argument_list|,
+literal|"id"
+argument_list|,
+literal|"qf"
+argument_list|,
+literal|"a_s b_s text_s"
+argument_list|,
+literal|"defType"
+argument_list|,
+literal|"edismax"
+argument_list|,
+literal|"mm"
+argument_list|,
+literal|"0"
+argument_list|,
+literal|"uf"
+argument_list|,
+literal|"b_s"
+argument_list|)
+argument_list|,
+literal|"//*[@numFound='2']"
+argument_list|,
+literal|"//str[@name='id'][.='145']"
+argument_list|,
+literal|"//str[@name='id'][.='146']"
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 end_class
 end_unit
